_sass/pro/_resume.scss
// Copyright (c) 2019 Florian Klampfer <https://qwtel.com/>

.layout-resume {
  .clearafter::after {
    @extend .clearfix;
  }

  h1 {
    display: inline-block;
    margin-bottom: .25rem;
  }

  .avatar {
    margin-top: -1rem;
  }

  header {
    > p { margin-bottom: 0 }
  }

  .page > header { 
    margin-bottom: 1.5rem
  }

  .subline {
    margin-top: 0;
  }

  .note {
    font-size: 1rem;
  }

  .mt2 { 
    margin-top: 1rem;
  }

  ul {
    margin-bottom: 1.5rem;
  }

  .h3 {
    margin-bottom: 1rem;
  }

  .h4 {
    margin-top: 0;
    font-family: $font-family!important;
    font-weight: var(--font-weight-bold)!important;
  }

  .bc {
    color: var(--body-color);
  }

  .bold {
    font-weight: var(--font-weight-bold);
  }

  .tags {
    list-style: none;
    font-size: smaller;
    padding-left: 0;
    margin: 0 -.375rem 1.5rem;
    clear: both;
  }

  .tag {
    @extend .color-transition;
    border: 1px solid var(--border-color);
    display: inline-block;
    margin: .25rem .125rem;
    padding: .125rem .25rem;
    color: var(--gray);
    line-height: 1.4;
  }

  .help {
    cursor: help;
  }

  .symbol {
    @extend .color-transition;
    float: right;
    color: var(--menu-text);
    margin-top: 4px;
    margin-left: .5rem;
  }

  .contact {
    margin-top: 2rem;

    dl:first-child {
      margin-bottom: 0;
    }

    dt, dd {
      margin-bottom: .5rem;
    }

    dt {
      clear: both;
      float: left;
      width: 2rem;

      [class*="icon-"] {
        font-size: 1.17rem;
        position: relative;
        top: 2px;
      }
    }

    dd {
      float: left;
      margin-left: 0;
      width: calc(100% - 2rem);
      padding-left: .25rem;
    }
  }

  .reference {
    margin-left: -1rem;

    > footer {
      margin-bottom: 0;
    }
  }

  .skills {
    > dt {
      margin-bottom: 0;
    }

    > dd {
      margin: 0;
    }
  }

  $pad: 2.5rem;

  .columns {
    margin-left: -$pad;

    &::after {
      @extend .clearfix;
    }
  }

  .column {
    float: left;
    padding-left: $pad;
    width: 100%;
  }

  .fr { 
    float: none;
    display: inline-block;
    margin-left: .25rem;
  }

  @media screen and (min-width: $break-point-5) {
    .fr { float: right }
    .column-3-5 { width: 66.67% }
    .column-2-5 { width: 33.33% }
  }

  @media screen and (min-width: $break-point-dynamic) {
    .columns.columns-break { width: calc(50vw + #{$r28} - 6rem) }
    .columns-break > .column-3-5 { width: $content-width-5 + 1rem }
    .columns-break > .column-2-5 { width: $content-width-5  / 2 - 4rem }
  }

  @media print {
    h2 {
      page-break-after: avoid;
      break-after: avoid-page;
    }
    section section, header, blockquote, dd, .npb {
      page-break-inside: avoid;
      break-inside: avoid-page;
    }
    .avatar {
      width: 9rem;
      height: 9rem;
    }
  }

  @media print and (min-width: 5.247in) {
    .fr { float: right }
    .column-3-5 { width: 66.67% }
    .column-2-5 { width: 33.33% }
  }
}

